// Copyright (c) 2020 Boston Dynamics, Inc.  All rights reserved.
//
// Downloading, reproducing, distributing or otherwise using the SDK Software
// is subject to the terms and conditions of the Boston Dynamics Software
// Development Kit License (20191101-BDSDK-SL).

syntax = "proto3";

package bosdyn.api;

option java_outer_classname = "PayloadRegistrationServiceProto";

import "bosdyn/api/payload_registration.proto";

// This service provides a way to register new payloads.
service PayloadRegistrationService {
    rpc RegisterPayload(RegisterPayloadRequest) returns (RegisterPayloadResponse);

    rpc UpdatePayloadVersion(UpdatePayloadVersionRequest) returns (UpdatePayloadVersionResponse);

    rpc GetPayloadAuthToken(GetPayloadAuthTokenRequest) returns (GetPayloadAuthTokenResponse);
}
